package template.improve;

/**
 * @author YangLiuQing
 * @date 2020/6/10 20:43
 */
public class BlackBeanSoyMilk extends SoyMilk {

    @Override
    public void add() {
        System.out.println("第二步，加入上好的黑豆作为配料");
    }
}
