package template.improve;

/**
 * @author YangLiuQing
 * @date 2020/6/10 20:50
 */
public class PeanutSoyMilk extends SoyMilk {
    @Override
    public void add() {
        System.out.println("第二步，加入上好的花生作为配料");
    }
}
